--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+$width: 100%;
+$height: auto;
 * {
   margin: 0;
 }
@@ -9,6 +11,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 1rem;
-  justify-content: center;
+}
+button {
+  margin: 0.5rem;
 }
