--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
   flex-grow: 1;
 }
 .dplayer-controller {
-  margin-bottom: 5px;
+  margin-bottom: 3px;
 }
 button {
   margin: 0.5rem;
@@ -20,6 +20,16 @@ button {
   width: 960px;
   height: 620px;
   margin: 0 auto;
+}
+.dplayer-subtitle {
+  text-shadow: 2px 2px 2px black !important;
+  font-weight: 500 !important;
+  p {
+    margin-bottom: 18px;
+    &:nth-last-child(1) {
+      margin-bottom: 30px;
+    }
+  }
 }
 @media screen and (max-width: 960px) {
   .dplayer {
