--- a/src/components/SpecialDay.scss
+++ b/src/components/SpecialDay.scss
@@ -1,5 +1,4 @@
 #specialday {
-  padding-bottom: 15px;
   background-position: center center;
   background-repeat: no-repeat;
   background-color: #fff;
@@ -10,7 +9,7 @@
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   border-radius: 15px;
   width: calc(100% - 10px);
-  height: 430px;
+  // height: 430px;
   position: fixed;
   top: 50%;
   left: 50%;
