--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  padding: 0;
 }
 .ant-layout {
   height: 100%;
@@ -9,8 +10,4 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-}
-
-button {
-  margin: 0.5rem;
 }
